--- a/pages/blog.html
+++ b/pages/blog.html
@@ -8,63 +8,69 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Anton&family=Mukta:wght@200;600;800&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <link rel="stylesheet" href="../css/styles.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Yellow Bikes - Blog</title>
     </head>
-    <body class="parallaxBlog">
-        <div id="top">
-            <!--no logro hacer con que el logo sea un link a home-->
-            <a href="../index.html"><img src="../img/yellowBikesLogo.png" alt="Yellow Bikes Logo" title="Yellow Bikes Logo Home" class="logo"></a>
-            <h1>Yellow Bikes</h1>
-        </div>
-        <div class="menu">
-            <nav>
-                <ul>
-                    <!--Menu horizontal, centralizado en la página-->
-                    <li><a href="../index.html">Página Principal</a></li>
-                    <li><a href="./categorias.html" target="_blank">Categorías</a></li>
-                    <li><a href="./dondeComprar.html" target="_blank">Dónde Comprar</a></li>
-                    <li><a href="./blog.html" target="_blank">Blog</a></li>
-                    <li><a href="./quienesSomos.html" target="_blank">Quiénes Somos</a></li>
-                    <li><a href="./contacto.html" target="_blank">Contacto</a></li>
-                    <form>
+    <div class="containerBlog container-fluid">
+        <div class="nav">
+            <div class="nav">
+                <div class="navBar">
+
+                      <div class="logo">
+                        <a href="../index.html"><img src="../img/yellowBikesLogo.png" alt="Yellow Bikes Logo" title="Yellow Bikes Logo Home" class="logoSize"></a>
+                      </div>
+                    <div class="menuDeNavegacion">
+                      <ul class="lista"> 
+                        <li><a href="../index.html">Página Principal</a></li>
+                        <li><a href="../pages/categorias.html">Categorías</a></li>
+                        <li><a href="../pages/dondeComprar.html">Dónde Comprar</a></li>
+                        <li><a href="../pages/blog.html">Blog</a></li>
+                        <li><a href="../pages/quienesSomos.html">Quiénes Somos</a></li>
+                        <li><a href="../pages/contacto.html">Contacto</a></li>
+                    </ul>
+                    </div>
+                    <div class="busqueda">
+                      <form>
                         <input type="text" placeholder="  Buscar en el sitio" class="formInput">
                         <button class="button">Buscar</button>
-                    </form>
-                </ul>
-            </nav>
+                      </form>
+                    </div>
+                  </div>
+            </div>
         </div>
-        <main class="llenadoDePagina"> <!--Todas las páginas van a usar esta caja de llenado, es donde van a estar los contenidos principales y así separarlos visualmente del menu superior y del footer-->
-            <header>
+        
+        <div class="mainBlog">
+            <div class="titleBlog">
                 <h2 class="tituloPagina">Blog</h2>
-                <p class="introBlog">Todos los viernes, nuestros expertos se sentan a tomarse un café y aprovechan para contarte las novedades, tendencia y darte consejos sobre el mundo del rodado.</p>
-            </header>
-                <!--El "Leer más" al final de cada párrafo introductório debe ser un link. Como se puede aplicar in link a solo la frase "Leer más" sin hacer todo el texto un link? Tendrían que tener un <p> propio?-->
-                <!--Cada card de artículo debe contener el título del artículo y el primer párrafo. La imagen y el título serán links para la página del artículo. Ellos intercalan su posicion entre alineados a derecha y a izquierda para dar una idea de chat-->
-            <div class="cardArticle1">
-                <h3>Conocé las nuevas Michelin Lithion</h3>
-                <p class="blogText">Pedalear en la ciudad tiene mejor performance con las nuesvas Michelin Lithion. Leer más</p>
             </div>
-            <div class="cardArticle2">
-                <h3>Cuál freno elegir?</h3>
-                <p class="blogText">La seguridad es muy importante al momento de pedalear y elegir el freno correcto es fundamental. Leer más</p>
+            <div class="articlesBlog">
+                <div class="blog1">
+                    <h3 class="titleBlogFormating">Conocé las nuevas Michelin Lithion</h3>
+                    <p>Pedalear en la ciudad tiene mejor performance con las nuesvas Michelin Lithion. Leer más</p>
+                </div>
+                <div class="blog2">
+                    <h3 class="titleBlogFormating">Cuál freno elegir?</h3>
+                    <p>La seguridad es muy importante al momento de pedalear y elegir el freno correcto es fundamental. Leer más</p>
+                </div>
+                <div class="blog3">
+                    <h3 class="titleBlogFormating">Cómo elegir luces para tu bicicleta</h3>
+                    <p>¿Cuál es la mejor opción de compra? Pues no existe una única respuesta. Depende de la modalidad ciclista que practiques, ya que cada una tiene sus particularidades. Leer más</p>
+                </div>
+                <div class="blog4">
+                    <h3 class="titleBlogFormating">6 consejos para andar en bici de noche</h3>
+                    <p>Montar en bicicleta por la noche es una sensación muy agradable a la vez que extraña y que todo el mundo al que le guste practicar ciclismo debería probar al menos una vez en su vida. Leer más</p>
+                </div>
             </div>
-            <div class="cardArticle3">
-                <h3>Cómo elegir luces para tu bicicleta</h3>
-                <p class="blogText">¿Cuál es la mejor opción de compra? Pues no existe una única respuesta. Depende de la modalidad ciclista que practiques, ya que cada una tiene sus particularidades. Leer más</p>
-            </div>
-            <div class="cardArticle4">
-                <h3>6 consejos para andar en bici de noche</h3>
-                <p class="blogText">Montar en bicicleta por la noche es una sensación muy agradable a la vez que extraña y que todo el mundo al que le guste practicar ciclismo debería probar al menos una vez en su vida. Leer más</p>
-            </div>
-        </main>
-        <a href="#top" name="Ir arriba" class="irArriba">Ir arriba</a>
-        <div>
-            <footer class="footer">
-                <h4 class="footerAlign__derechos">Yellow Bikes - Todos los derechos reservados</h4>
-                <p class="footerAlign__direccion1">Santana 195 - Almagro</p>
-                <p class="footerAlign__direccion2">Buenos Aires/Argentina</p>
-            </footer>
         </div>
-    </body>                                                                   
+        <div class="irArriba">
+            <a href="#top" name="Ir arriba" class="irArribaTxt">Ir arriba</a>
+        </div>
+        <div class="footer">
+            <h4 class="footerAlign__derechos">Yellow Bikes - Todos los derechos reservados</h4>
+            <p class="footerAlign__direccion1">Santana 195 - Almagro</p>
+            <p class="footerAlign__direccion2">Buenos Aires/Argentina</p>
+        </div>
+    </div>                                        
 </html>
