--- a/pages/categorias.html
+++ b/pages/categorias.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="width=device-width, initial-scale=1.0">
-        <link rel="shortcut icon" href="../img/favicon.png" type="image/x-icon">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Anton&family=Mukta:wght@200;600;800&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="../css/styles.css">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <title>Yellow Bikes - Categorías</title>
+      <meta charset="UTF-8">
+      <meta http-equiv="X-UA-Compatible" content="width=device-width, initial-scale=1.0">
+      <link rel="shortcut icon" href="../img/favicon.png" type="image/x-icon">
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Anton&family=Mukta:wght@200;600;800&display=swap" rel="stylesheet">
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+      <link rel="stylesheet" href="../css/styles.css">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Yellow Bikes - Categorías</title>
     </head>
-    <div class="containerCategorias">
+    <div class="container-fluid containerCategorias">
       <div class="navBar">
         <div class="logo">
           <div class="logo">
@@ -21,12 +22,12 @@
         </div>
         <div class="menuDeNavegacion">
           <ul class="lista"> 
-            <li><a href="./index.html">Página Principal</a></li>
-            <li><a href="./pages/categorias.html">Categorías</a></li>
-            <li><a href="./pages/dondeComprar.html">Dónde Comprar</a></li>
-            <li><a href="./pages/blog.html">Blog</a></li>
-            <li><a href="./pages/quienesSomos.html">Quiénes Somos</a></li>
-            <li><a href="./pages/contacto.html">Contacto</a></li>
+            <li><a href="../index.html">Página Principal</a></li>
+            <li><a href="../pages/categorias.html">Categorías</a></li>
+            <li><a href="../pages/dondeComprar.html">Dónde Comprar</a></li>
+            <li><a href="../pages/blog.html">Blog</a></li>
+            <li><a href="../pages/quienesSomos.html">Quiénes Somos</a></li>
+            <li><a href="../pages/contacto.html">Contacto</a></li>
         </ul>
         </div>
         <div class="busqueda">
@@ -37,16 +38,16 @@
         </div>
       </div>
       
-      <div class="categorias">
+      <div class="categorias ">
         <div class="headCategorias">
           <div class="tituloCategorias">
             <h2 class="tituloPagina">Categorías</h2>
           </div>
           <div class="descripcionCategorias">
-            <p class="introCategorias">Conocé todos nuestros productos</p>
+            <p>Conocé todos nuestros productos</p>
           </div>
         </div>
-        <div class="modelosYellow">
+        <div class="modelosYellow col-12">
           <div class="imgModelosYellow">
             <img src="../img/modelos.png" alt="Modelos Yellow" title="Nuestros Modelos" class="imgModelosYellowFormat">
           </div>
@@ -54,7 +55,7 @@
             <p>Modelos Yellow</p>
           </div>
         </div>
-        <div class="cuadros">
+        <div class="cuadros col-12">
           <div class="imgCuadros">
             <img src="../img/cuadros.png" alt="Cuadros" title="Cuadros" class="imgCuadrosFormat">
           </div>
@@ -62,7 +63,7 @@
             <p>Cuadros</p>
           </div>
         </div>
-        <div class="rodados">
+        <div class="rodados col-12">
           <div class="imgRodados">
             <img src="../img/rodados.png" alt="Frenos" title="Rodados" class="imgRodadosFormat">
           </div>
@@ -70,7 +71,7 @@
             <p>Rodados</p>
           </div>
         </div>
-        <div class="frenos">
+        <div class="frenos col-12">
           <div class="imgFrenos">
             <img src="../img/frenos.png" alt="Frenos" title="Frenos" class="imgFrenosFormat">
           </div>
@@ -78,7 +79,7 @@
             <p>Frenos</p>
           </div>
         </div>
-        <div class="cambios">
+        <div class="cambios col-12">
           <div class="imgCambios">
             <img src="../img/cambios.png" alt="Cambios" title="Cambios" class="imgCambiosFormat">
           </div>
@@ -86,7 +87,7 @@
             <p>Cambios</p>
           </div>
         </div>
-        <div class="accesorios">
+        <div class="accesorios col-12">
           <div class="imgAccesorios">
             <img src="../img/accesorios.png" alt="Accesorios" title="Accesorios" class="imgAccesoriosFormat">
           </div>
@@ -95,7 +96,7 @@
           </div>
         </div>
       </div>
-      <div class="irArribaCat">
+      <div class="irArriba">
         <a href="#top" name="Ir arriba" class="irArribaTxt">Ir arriba</a>
       </div>
       <div class="footer">
