agregué sticky bootstrap al nav

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -14,15 +14,14 @@
         <title>Yellow Bikes - Blog</title>
     </head>
     <div class="containerBlog container-fluid">
-        <div class="nav">
+        <div class="nav sticky-top">
             <div class="nav">
-                <div class="navBar">
-
-                      <div class="logo">
+                <div class="navBar sticky-top">
+                    <div class="logo">
                         <a href="../index.html"><img src="../img/yellowBikesLogo.png" alt="Yellow Bikes Logo" title="Yellow Bikes Logo Home" class="logoSize"></a>
-                      </div>
+                    </div>
                     <div class="menuDeNavegacion">
-                      <ul class="lista"> 
+                    <ul class="lista"> 
                         <li><a href="../index.html">Página Principal</a></li>
                         <li><a href="../pages/categorias.html">Categorías</a></li>
                         <li><a href="../pages/dondeComprar.html">Dónde Comprar</a></li>
@@ -32,12 +31,12 @@
                     </ul>
                     </div>
                     <div class="busqueda">
-                      <form>
-                        <input type="text" placeholder="  Buscar en el sitio" class="formInput">
-                        <button class="button">Buscar</button>
-                      </form>
+                        <form>
+                            <input type="text" placeholder="  Buscar en el sitio" class="formInput">
+                            <button class="button">Buscar</button>
+                        </form>
                     </div>
-                  </div>
+                </div>
             </div>
         </div>
         
