--- a/pages/dondeComprar.html
+++ b/pages/dondeComprar.html
@@ -14,8 +14,7 @@
         <title>Yellow Bikes - Dónde Comprar</title>
     </head>
     <div class="containerDondeComprar container-fluid">
-        <div class="nav">
-            <div class="navBar">
+            <div class="navBar sticky-top">
                 <div class="logo">
                   <div class="logo">
                     <a href="../index.html"><img src="../img/yellowBikesLogo.png" alt="Yellow Bikes Logo" title="Yellow Bikes Logo Home" class="logoSize"></a>
@@ -38,7 +37,6 @@
                   </form>
                 </div>
               </div>
-        </div>
         <div class="mainDondeComprar">
             <div class="tituloDondeComprar">
                 <p class="textTitleDondeComprar ">Nuestros Revendedores</p>
