--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </head>
 
     <div class="container-fluid">
-        <div class="navBar">
+        <div class="navBar sticky-top">
           <div class="logo">
             <a href="./index.html"><img src="img/yellowbikeslogo.png" alt="Yellow Bikes Logo" title="Yellow Bikes Logo Home" class="logoSize"></a>
           </div>
