--- a/pages/categorias.html
+++ b/pages/categorias.html
@@ -14,7 +14,7 @@
       <title>Yellow Bikes - Categorías</title>
     </head>
     <div class="container-fluid containerCategorias">
-      <div class="navBar">
+      <div class="navBar sticky-top">
         <div class="logo">
           <div class="logo">
             <a href="../index.html"><img src="../img/yellowBikesLogo.png" alt="Yellow Bikes Logo" title="Yellow Bikes Logo Home" class="logoSize"></a>
