agregué clase dflex de bootstrap a la busqueda del navBar

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -26,7 +26,7 @@
             </ul>
         </div>
         <div class="busqueda">
-            <form>
+            <form class="d-flex">
                 <input type="text" placeholder="  Buscar en el sitio" class="formInput">
                 <button class="button">Buscar</button>
             </form>  
