maqueté bootstrap en dos páginas: index y categorias con col-md

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -13,7 +13,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Yellow Bikes - Blog</title>
     </head>
-    <div class="containerBlog container-fluid">
+    <body class="containerBlog container-fluid">
         <div class="nav sticky-top">
             <div class="nav">
                 <div class="navBar sticky-top">
@@ -71,5 +71,5 @@
             <p class="footerAlign__direccion1">Santana 195 - Almagro</p>
             <p class="footerAlign__direccion2">Buenos Aires/Argentina</p>
         </div>
-    </div>                                        
+    </body>                                        
 </html>
