--- a/pages/dondeComprar.html
+++ b/pages/dondeComprar.html
@@ -13,7 +13,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Yellow Bikes - Dónde Comprar</title>
     </head>
-    <div class="containerDondeComprar container-fluid">
+    <body class="containerDondeComprar container-fluid">
             <div class="navBar sticky-top">
                 <div class="logo">
                   <div class="logo">
@@ -58,5 +58,5 @@
             <p class="footerAlign__direccion1">Santana 195 - Almagro</p>
             <p class="footerAlign__direccion2">Buenos Aires/Argentina</p>
         </div>
-      </div>
+      </body>
 </html>
