--- a/pages/quienesSomos.html
+++ b/pages/quienesSomos.html
@@ -13,29 +13,28 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Yellow Bikes - Quiénes Somos</title>
     </head>
-    <div class="navBar sticky-top">
-        <div class="logo">
-            <a href="../index.html"><img src="../img/yellowBikesLogo.png" alt="Yellow Bikes Logo" title="Yellow Bikes Logo Home" class="logoSize"></a>
+    <body class="containerQuienesSomos container-fluid">
+        <div class="navBar sticky-top">
+            <div class="logo">
+                <a href="../index.html"><img src="../img/yellowBikesLogo.png" alt="Yellow Bikes Logo" title="Yellow Bikes Logo Home" class="logoSize"></a>
+            </div>
+            <div class="menuDeNavegacion">
+                <ul class="lista"> 
+                    <li><a href="../index.html">Página Principal</a></li>
+                    <li><a href="../pages/categorias.html">Categorías</a></li>
+                    <li><a href="../pages/dondeComprar.html">Dónde Comprar</a></li>
+                    <li><a href="../pages/blog.html">Blog</a></li>
+                    <li><a href="../pages/quienesSomos.html">Quiénes Somos</a></li>
+                    <li><a href="../pages/contacto.html">Contacto</a></li>
+                </ul>
+            </div>
+            <div class="busqueda">
+                <form class="d-flex">
+                    <input type="text" placeholder="  Buscar en el sitio" class="formInput">
+                    <button class="button">Buscar</button>
+                </form>  
+            </div>
         </div>
-        <div class="menuDeNavegacion">
-            <ul class="lista"> 
-                <li><a href="../index.html">Página Principal</a></li>
-                <li><a href="../pages/categorias.html">Categorías</a></li>
-                <li><a href="../pages/dondeComprar.html">Dónde Comprar</a></li>
-                <li><a href="../pages/blog.html">Blog</a></li>
-                <li><a href="../pages/quienesSomos.html">Quiénes Somos</a></li>
-                <li><a href="../pages/contacto.html">Contacto</a></li>
-            </ul>
-        </div>
-        <div class="busqueda">
-            <form class="d-flex">
-                <input type="text" placeholder="  Buscar en el sitio" class="formInput">
-                <button class="button">Buscar</button>
-            </form>  
-        </div>
-    </div>
-    <div class="containerQuienesSomos container-fluid">
-        
         <div class="mainQuienesSomos">
             <div class="titleQuienesSomos">
                 <p>Nuestra Historia</p>
@@ -55,5 +54,5 @@
             <p class="footerAlign__direccion1">Santana 195 - Almagro</p>
             <p class="footerAlign__direccion2">Buenos Aires/Argentina</p>
         </div>
-    </div>
+    </body>
 </html>
