--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -11,29 +11,28 @@
         <link rel="stylesheet" href="../css/styles.css">
         <title>Yellow Bikes - Contacto</title>
     </head>
-    <div class="navBar">
-        <div class="logo">
-            <a href="../index.html"><img src="../img/yellowBikesLogo.png" alt="Yellow Bikes Logo" title="Yellow Bikes Logo Home" class="logoSize"></a>
+    <body class="containerContacto container-fluid">
+        <div class="navBar">
+            <div class="logo">
+                <a href="../index.html"><img src="../img/yellowBikesLogo.png" alt="Yellow Bikes Logo" title="Yellow Bikes Logo Home" class="logoSize"></a>
+            </div>
+            <div class="menuDeNavegacion">
+                <ul class="lista"> 
+                    <li><a href="../index.html">Página Principal</a></li>
+                    <li><a href="../pages/categorias.html">Categorías</a></li>
+                    <li><a href="../pages/dondeComprar.html">Dónde Comprar</a></li>
+                    <li><a href="../pages/blog.html">Blog</a></li>
+                    <li><a href="../pages/quienesSomos.html">Quiénes Somos</a></li>
+                    <li><a href="../pages/contacto.html">Contacto</a></li>
+                </ul>
+            </div>
+            <div class="busqueda">
+                <form class="d-flex">
+                    <input type="text" placeholder="  Buscar en el sitio" class="formInput">
+                    <button class="button">Buscar</button>
+                </form>  
+            </div>
         </div>
-        <div class="menuDeNavegacion">
-            <ul class="lista"> 
-                <li><a href="../index.html">Página Principal</a></li>
-                <li><a href="../pages/categorias.html">Categorías</a></li>
-                <li><a href="../pages/dondeComprar.html">Dónde Comprar</a></li>
-                <li><a href="../pages/blog.html">Blog</a></li>
-                <li><a href="../pages/quienesSomos.html">Quiénes Somos</a></li>
-                <li><a href="../pages/contacto.html">Contacto</a></li>
-            </ul>
-        </div>
-        <div class="busqueda">
-            <form class="d-flex">
-                <input type="text" placeholder="  Buscar en el sitio" class="formInput">
-                <button class="button">Buscar</button>
-            </form>  
-        </div>
-    </div>
-
-    <div class="containerContacto container-fluid">
         <div class="mainContacto">
             <div class="tituloContacto">
                 <h2 class="tituloPagina">Contacto</h2>
@@ -58,13 +57,10 @@
                     </div>
                     <div class="formFields">
                         <p class="formText">Te enviamos una cópia por e-mail?</p>
-
                         <label for="Copia al mail" class="formText">Sí</label>
                         <input type="radio" name="Copia al mail" id="Sí">
-
                         <label for="Copia al mail" class="formText">No</label>
                         <input type="radio" name="Copia al mail" id="No">
-                        
                         <input type="submit" value="Enviar consulta">
                         <input type="reset" value="Limpiar formulario">
                     </div>
@@ -90,5 +86,5 @@
             <p class="footerAlign__direccion1">Santana 195 - Almagro</p>
             <p class="footerAlign__direccion2">Buenos Aires/Argentina</p>
         </div>
-    </div>
+    </body>
 </html>
