--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="fadeinout">
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="width=device-width, initial-scale=1.0">
@@ -9,15 +9,16 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Anton&family=Mukta:wght@200;600;800&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="./css/styles.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Yellow Bikes</title> 
     </head>
-    <nav class="navbar d-flex justify-content-between align-items-center sticky-top">
-          <a class="navbar-brand col-md-1" href="#">
-            <img src="./img/yellowBikesLogo.png" alt="yellowBikesLogo" width="30" height="24" class="logo">
+    <body class="container-fluid">  
+      <nav class="navbar d-flex align-items-center sticky-top justify-content-evenly">
+          <a class="navbar-brand col-md-1" href="./index.html">
+            <img src="./img/yellowBikesLogo.png" alt="yellowBikesLogo"  class="logo">
           </a>
-          <div class=" container col-md-8 justify-content-between">              
+          <div class="menuDeNavegacion container col-md-8 justify-content-evenly">              
             <li><a href="index.html">Página Principal</a></li>
             <li><a href="./pages/categorias.html">Categorías</a></li>
             <li><a href="./pages/dondeComprar.html">Dónde Comprar</a></li>
