--- a/pages/categorias.html
+++ b/pages/categorias.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="fadeinout">
     <head>
       <meta charset="UTF-8">
       <meta http-equiv="X-UA-Compatible" content="width=device-width, initial-scale=1.0">
@@ -15,16 +15,16 @@
     </head>
     <body class="container-fluid containerCategorias">
       <nav class="navbar d-flex justify-content-between align-items-center sticky-top">
-        <a class="navbar-brand col-md-1" href="#">
+        <a class="navbar-brand col-md-1" href="../index.html">
           <img src="../img/yellowBikesLogo.png" alt="yellowBikesLogo"  class="logo">
         </a>
         <div class=" container col-md-8 justify-content-between">              
-          <li><a href="index.html">Página Principal</a></li>
-          <li><a href="./pages/categorias.html">Categorías</a></li>
-          <li><a href="./pages/dondeComprar.html">Dónde Comprar</a></li>
-          <li><a href="./pages/blog.html">Blog</a></li>
-          <li><a href="./pages/quienesSomos.html">Quiénes Somos</a></li>
-          <li><a href="./pages/contacto.html">Contacto</a></li>
+          <li><a href="../index.html">Página Principal</a></li>
+          <li><a href="./categorias.html">Categorías</a></li>
+          <li><a href="../pages/dondeComprar.html">Dónde Comprar</a></li>
+          <li><a href="../pages/blog.html">Blog</a></li>
+          <li><a href="../pages/quienesSomos.html">Quiénes Somos</a></li>
+          <li><a href="../pages/contacto.html">Contacto</a></li>
         </div>
         <form class="col-md-2">
           <input type="text" placeholder="  Buscar en el sitio" class="formInput">
@@ -94,98 +94,5 @@
       <p class="footerAlign__direccion1">Santana 195 - Almagro</p>
       <p class="footerAlign__direccion2">Buenos Aires/Argentina</p>
   </div>
-    
-      <!--  <div class="navBar sticky-top">
-        <div class="logo">
-          <div class="logo">
-            <a href="../index.html"><img src="../img/yellowBikesLogo.png" alt="Yellow Bikes Logo" title="Yellow Bikes Logo Home" class="logoSize"></a>
-          </div>
-        </div>
-        <div class="menuDeNavegacion">
-          <ul class="lista"> 
-            <li><a href="../index.html">Página Principal</a></li>
-            <li><a href="../pages/categorias.html">Categorías</a></li>
-            <li><a href="../pages/dondeComprar.html">Dónde Comprar</a></li>
-            <li><a href="../pages/blog.html">Blog</a></li>
-            <li><a href="../pages/quienesSomos.html">Quiénes Somos</a></li>
-            <li><a href="../pages/contacto.html">Contacto</a></li>
-        </ul>
-        </div>
-        <div class="busqueda">
-          <form class="d-flex">
-            <input type="text" placeholder="  Buscar en el sitio" class="formInput">
-            <button class="button">Buscar</button>
-          </form>
-        </div>
-      </div>
-      
-      <div class="categorias ">
-        <div class="headCategorias">
-          <div class="tituloCategorias">
-            <h2 class="tituloPagina">Categorías</h2>
-          </div>
-          <div class="descripcionCategorias">
-            <p>Conocé todos nuestros productos</p>
-          </div>
-        </div>
-        <div class="modelosYellow col-12">
-          <div class="imgModelosYellow">
-            <img src="../img/modelos.png" alt="Modelos Yellow" title="Nuestros Modelos" class="imgModelosYellowFormat">
-          </div>
-          <div class="tituloModelosYellow">
-            <p>Modelos Yellow</p>
-          </div>
-        </div>
-        <div class="cuadros col-12">
-          <div class="imgCuadros">
-            <img src="../img/cuadros.png" alt="Cuadros" title="Cuadros" class="imgCuadrosFormat">
-          </div>
-          <div class="tituloCuadros">
-            <p>Cuadros</p>
-          </div>
-        </div>
-        <div class="rodados col-12">
-          <div class="imgRodados">
-            <img src="../img/rodados.png" alt="Frenos" title="Rodados" class="imgRodadosFormat">
-          </div>
-          <div class="tituloRodados">
-            <p>Rodados</p>
-          </div>
-        </div>
-        <div class="frenos col-12">
-          <div class="imgFrenos">
-            <img src="../img/frenos.png" alt="Frenos" title="Frenos" class="imgFrenosFormat">
-          </div>
-          <div class="tituloFrenos">
-            <p>Frenos</p>
-          </div>
-        </div>
-        <div class="cambios col-12">
-          <div class="imgCambios">
-            <img src="../img/cambios.png" alt="Cambios" title="Cambios" class="imgCambiosFormat">
-          </div>
-          <div class="tituloCambios">
-            <p>Cambios</p>
-          </div>
-        </div>
-        <div class="accesorios col-12">
-          <div class="imgAccesorios">
-            <img src="../img/accesorios.png" alt="Accesorios" title="Accesorios" class="imgAccesoriosFormat">
-          </div>
-          <div class="tituloAccesorios">
-            <p>Accesorios</p>
-          </div>
-        </div>
-      </div>
-      <div class="irArriba">
-        <a href="#top" name="Ir arriba" class="irArribaTxt">Ir arriba</a>
-      </div>
-      <div class="footer">
-        <h4 class="footerAlign__derechos">Yellow Bikes - Todos los derechos reservados</h4>
-        <p class="footerAlign__direccion1">Santana 195 - Almagro</p>
-        <p class="footerAlign__direccion2">Buenos Aires/Argentina</p>
-      </div>
-      <div class="paddingRight"></div>
-      <div class="paddingLeft"></div>-->
-    </body>
+  </body>
 </html>
