--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -8,32 +8,32 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Anton&family=Mukta:wght@200;600;800&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <link rel="stylesheet" href="../css/styles.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Yellow Bikes - Contacto</title>
     </head>
     <body class="containerContacto container-fluid">
-        <div class="navBar">
-            <div class="logo">
-                <a href="../index.html"><img src="../img/yellowBikesLogo.png" alt="Yellow Bikes Logo" title="Yellow Bikes Logo Home" class="logoSize"></a>
-            </div>
-            <div class="menuDeNavegacion">
-                <ul class="lista"> 
+        <div class="navBar sticky-top">
+            <nav class="navbar d-flex justify-content-between align-items-center">
+                <a class="navbar-brand col-md-1" href="../index.html">
+                    <img src="../img/yellowBikesLogo.png" alt="yellowBikesLogo"  class="logo">
+                </a>
+                <div class=" container col-md-8 justify-content-between">              
                     <li><a href="../index.html">Página Principal</a></li>
                     <li><a href="../pages/categorias.html">Categorías</a></li>
                     <li><a href="../pages/dondeComprar.html">Dónde Comprar</a></li>
                     <li><a href="../pages/blog.html">Blog</a></li>
                     <li><a href="../pages/quienesSomos.html">Quiénes Somos</a></li>
-                    <li><a href="../pages/contacto.html">Contacto</a></li>
-                </ul>
-            </div>
-            <div class="busqueda">
-                <form class="d-flex">
+                    <li><a href="./contacto.html">Contacto</a></li>
+                    </div>
+                <form class="col-md-2">
                     <input type="text" placeholder="  Buscar en el sitio" class="formInput">
                     <button class="button">Buscar</button>
-                </form>  
-            </div>
+                </form>
+            </nav>
         </div>
-        <div class="mainContacto">
+        <div class="mainContacto container">
             <div class="tituloContacto">
                 <h2 class="tituloPagina">Contacto</h2>
             </div>
