--- a/pages/dondeComprar.html
+++ b/pages/dondeComprar.html
@@ -14,29 +14,23 @@
         <title>Yellow Bikes - Dónde Comprar</title>
     </head>
     <body class="containerDondeComprar container-fluid">
-            <div class="navBar sticky-top">
-                <div class="logo">
-                  <div class="logo">
-                    <a href="../index.html"><img src="../img/yellowBikesLogo.png" alt="Yellow Bikes Logo" title="Yellow Bikes Logo Home" class="logoSize"></a>
-                  </div>
-                </div>
-                <div class="menuDeNavegacion">
-                    <ul class="lista"> 
-                        <li><a href="../index.html">Página Principal</a></li>
-                        <li><a href="../pages/categorias.html">Categorías</a></li>
-                        <li><a href="../pages/dondeComprar.html">Dónde Comprar</a></li>
-                        <li><a href="../pages/blog.html">Blog</a></li>
-                        <li><a href="../pages/quienesSomos.html">Quiénes Somos</a></li>
-                        <li><a href="../pages/contacto.html">Contacto</a></li>
-                    </ul>
-                </div>
-                <div class="busqueda">
-                  <form class="d-flex">
-                    <input type="text" placeholder="  Buscar en el sitio" class="formInput">
-                    <button class="button">Buscar</button>
-                  </form>
-                </div>
-              </div>
+      <nav class="navbar d-flex justify-content-between align-items-center sticky-top">
+        <a class="navbar-brand col-md-1" href="../index.html">
+          <img src="../img/yellowBikesLogo.png" alt="yellowBikesLogo"  class="logo">
+        </a>
+        <div class=" container col-md-8 justify-content-between">              
+          <li><a href="../index.html">Página Principal</a></li>
+          <li><a href="../pages/categorias.html">Categorías</a></li>
+          <li><a href="./dondeComprar.html">Dónde Comprar</a></li>
+          <li><a href="../pages/blog.html">Blog</a></li>
+          <li><a href="../pages/quienesSomos.html">Quiénes Somos</a></li>
+          <li><a href="../pages/contacto.html">Contacto</a></li>
+        </div>
+        <form class="col-md-2">
+          <input type="text" placeholder="  Buscar en el sitio" class="formInput">
+          <button class="button">Buscar</button>
+        </form>
+    </nav>
         <div class="mainDondeComprar">
             <div class="tituloDondeComprar">
                 <p class="textTitleDondeComprar ">Nuestros Revendedores</p>
