--- a/pages/quienesSomos.html
+++ b/pages/quienesSomos.html
@@ -14,28 +14,24 @@
         <title>Yellow Bikes - Quiénes Somos</title>
     </head>
     <body class="containerQuienesSomos container-fluid">
-        <div class="navBar sticky-top">
-            <div class="logo">
-                <a href="../index.html"><img src="../img/yellowBikesLogo.png" alt="Yellow Bikes Logo" title="Yellow Bikes Logo Home" class="logoSize"></a>
-            </div>
-            <div class="menuDeNavegacion">
-                <ul class="lista"> 
-                    <li><a href="../index.html">Página Principal</a></li>
-                    <li><a href="../pages/categorias.html">Categorías</a></li>
-                    <li><a href="../pages/dondeComprar.html">Dónde Comprar</a></li>
-                    <li><a href="../pages/blog.html">Blog</a></li>
-                    <li><a href="../pages/quienesSomos.html">Quiénes Somos</a></li>
-                    <li><a href="../pages/contacto.html">Contacto</a></li>
-                </ul>
-            </div>
-            <div class="busqueda">
-                <form class="d-flex">
-                    <input type="text" placeholder="  Buscar en el sitio" class="formInput">
-                    <button class="button">Buscar</button>
-                </form>  
-            </div>
-        </div>
-        <div class="mainQuienesSomos">
+        <nav class="navbar d-flex justify-content-between align-items-center sticky-top">
+            <a class="navbar-brand col-md-1" href="../index.html">
+                <img src="../img/yellowBikesLogo.png" alt="yellowBikesLogo"  class="logo">
+            </a>
+            <div class=" container col-md-8 justify-content-between">              
+                <li><a href="../index.html">Página Principal</a></li>
+                <li><a href="../pages/categorias.html">Categorías</a></li>
+                <li><a href="../pages/dondeComprar.html">Dónde Comprar</a></li>
+                <li><a href="../pages/blog.html">Blog</a></li>
+                <li><a href="./quienesSomos.html">Quiénes Somos</a></li>
+                <li><a href="../pages/contacto.html">Contacto</a></li>
+                </div>
+            <form class="col-md-2">
+                <input type="text" placeholder="  Buscar en el sitio" class="formInput">
+                <button class="button">Buscar</button>
+            </form>
+        </nav>
+        <div class="mainQuienesSomos container">
             <div class="titleQuienesSomos">
                 <p>Nuestra Historia</p>
             </div>
